--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -44,9 +44,10 @@ Aufgrund der strukturellen Vielfalt bei amorphen Aluminiumoxiden lässt sich kei
 Bindungslängen und Koordinationszahlen wurden direkt aus der radialen Verteilungsfunktion bestimmt, wobei die Referenzwerte auf gleiche Weise durch die Untersuchung der Kristallstruktur bestimmt wurden, welche mittels Materials Studio auf Basis eines $\alpha$-\ce{Al2O3}-Kristalles präpariert wurde.
 
 \begin{table}
-  \caption[Vergleich struktureller Eigenschaften von Bulk-\ce{Al2O3} mit verschiedenen Parametersätzen]{
-    Vergleich struktureller Eigenschaften von Bulk-\ce{Al2O3} mit verschiedenen Parametersätzen.
-    Bindungslängen und Koordinationszahlen stammen von einer relaxierten Kristallstruktur.
+  \oddrowcolors
+  \caption[Vergleich struktureller Eigenschaften von $\alpha$-\ce{Al2O3}]{
+    Vergleich struktureller Eigenschaften von $\alpha$-\ce{Al2O3} für verfügbare ReaxFF-Parametrisierungen.
+    Referenzwerte stammen von einer relaxierten Kristallstruktur.
   }
   \label{tab:aluminabulks}
 
