--- a/appendix.tex
+++ b/appendix.tex
@@ -4,6 +4,7 @@
   %% \input{appendix_lammpsrant}
   \input{appendix_multilayer}
   \input{appendix_silicon}
+  \input{appendix_alumina}
 
   %\newpage
   %\addcontentsline{toc}{chapter}{B. Danksagung}
