--- a/contents.tex
+++ b/contents.tex
@@ -104,6 +104,7 @@ Parsivald  &   \multicolumn{2}{X}{Parallel Atomistic Reaction Simulator for Vapo
 \begin{tabularx}{\linewidth}{ll}
 $E_\text{A}$       & Aktivierungsenergie            \\
 $p_\text{partial}$ & Partialdruck                   \\
+$\sigma_z$         & RMS-Rauheit einer Oberfläche   \\
 $\tau$             & Dämpfungszeit des Thermostates \\
 \end{tabularx}
 \todo[inline]{die wichtigsten Symbole automatisch aus allen Formeln exportieren}
