--- a/forcefields.tex
+++ b/forcefields.tex
@@ -28,7 +28,7 @@ Unterhalb dieses Radius' dominiert ein repulsiver Term, wo hingegen oberhalb dav
 \begin{figure}
   \centering
   \includegraphics[width=0.5\textwidth]{mdpotplot}
-  \caption{Beispiele einfacher Paarpotentiale}
+  \caption{Auswahl einfacher molekulardynamischer Paarpotentiale}
   \label{fig:mdpairpotentials}
 \end{figure}
 
@@ -86,7 +86,9 @@ Darüber hinaus werden einige Terme in der Nähe des Cutoff-Abstands sowie an Ko
 
 \begin{table}
   \oddrowcolors
-  \caption[ReaxFF Energiebeiträge]{ReaxFF Energiebeiträge aus Gleichung~\ref{eq:reaxformulation}}
+  \caption[Summanden der ReaxFF-Gesamtenergie]{
+    Erläuterung der Summanden der ReaxFF-Gesamtenergie aus Gleichung~\ref{eq:reaxformulation}\cite{van_duin_reaxff:_2001}
+  }
   \label{tab:reaxenergies}
   \begin{tabularx}{\textwidth}{|llX|}
     \hline
