--- a/kmc.tex
+++ b/kmc.tex
@@ -37,9 +37,11 @@ Abbildung~\ref{fig:kmctree} zeigt zur Veranschaulichung ein generisches Beispiel
   \def\svgwidth{14cm}
   \input{img/kmc_tree.pdf_tex}
 
-  \caption[KMC-Baum]{Beispiel des Verlaufs einer KMC-Simulation:
-    Ein Ereignis $E_i$ wird zufällig ausgeführt, um die Zustände $X_n$ aus den möglichen Zuständen $X_n^i$ auszuwählen.
+  \caption[Exemplarischer Verlauf einer KMC-Simulation]{
+    Exemplarischer Verlauf einer KMC-Simulation:
+    Ereignisse $E_i$ werden in jedem Schritt $n$ zufällig ausgewählt, um eine Folge von Zuständen $X_n$ zu erhalten.
   }
+
   \label{fig:kmctree}
 \end{figure}
 
